laborations/lab2/testsuite/bad/bad002.cc
int main() {
	int x = 1;
	{
		int y;
	}
	int x;
	return 0;
}
